--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "template",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
@@ -28,5 +27,6 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
-  }
+  },
+  "description": ""
 }
