--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "template",
+  "name": "currency",
   "version": "1.0.0",
+  "description": "Currency exchange app",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
+    "start": "npm run build && webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d dist",
+    "publish": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +17,14 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@popperjs/core": "^2.10.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "dotenv-webpack": "^2.0.0",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
@@ -24,9 +33,8 @@
     "webpack-dev-server": "3.8.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
+    "html-loader": "^1.3.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
-  },
-  "description": ""
+  }
 }
